--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brolly-ui-core",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Base dependencies required by all packages",
   "main": "index.js",
   "author": "Ryosuke",
