--- a/packages/variants/package.json
+++ b/packages/variants/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brolly-ui-variants",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Variant styles shared across components",
   "keywords": [
     "css",
@@ -36,6 +36,6 @@
     "url": "https://github.com/whoisryosuke/design-systems-monorepo/issues"
   },
   "dependencies": {
-    "brolly-ui-core": "^0.0.0"
+    "brolly-ui-core": "^0.0.1-alpha.0"
   }
 }
