--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brolly-ui-core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Base dependencies required by all packages",
   "main": "index.js",
   "author": "Ryosuke",
@@ -14,5 +14,6 @@
   },
   "devDependencies": {
     "@types/styled-system": "^5.1.9"
-  }
+  },
+  "gitHead": "ff4a6b851c0136a003a080ece9914e4554017d56"
 }
