--- a/packages/variants/package.json
+++ b/packages/variants/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brolly-ui-variants",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Variant styles shared across components",
   "keywords": [
     "css",
@@ -36,6 +36,7 @@
     "url": "https://github.com/whoisryosuke/design-systems-monorepo/issues"
   },
   "dependencies": {
-    "brolly-ui-core": "^0.1.0"
-  }
+    "brolly-ui-core": "^0.1.1"
+  },
+  "gitHead": "ff4a6b851c0136a003a080ece9914e4554017d56"
 }
